--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="card-body">
 
-          <div class="before-submit">
+          <div id="file-submit-form-container" class="before-submit">
 
             <div class="container file-form-container">
               <form id="file-submission-form" action="/imagechecker/upload" enctype="multipart/form-data" method="post"
@@ -37,12 +37,8 @@
 
 
           </div>
-          <div class="after-submit hidden">
-            <div class="container form-container final-submit-button-container hidden">
-              <form id="final-submit">
-                <button class="btn btn-success" type="submit">final submit</button>
-              </form>
-            </div>
+          <div id="loader-gif-container" class="after-submit hidden">
+            <img src="{{url_for('static',filename='loader.gif')}}">
           </div>
         </div>
       </div>
