--- a/proj/templates/imgreport.html
+++ b/proj/templates/imgreport.html
@@ -28,6 +28,13 @@
                 <div class="data-container">
                   {{data|safe}}
                 </div>
+                <br>
+                <div class="row">
+                  <div id="save-changes-button-container" class="col-sm">
+                    <button class="btn btn-primary" id="save-changes-button" onclick="saveChanges()">Save changes in session</button>
+                  </div>
+
+                </div>
               </div>
             </div>
             <br>
@@ -38,7 +45,6 @@
               <div class="card-body">
                 <div class="cropped-img-outer-container">
                   <div class="cropped-img-container">
-                    <div><span>Marked Picture</span></div>
                     <img
                       src="https://mpchecker.sccwrp.org/imagechecker/media?photo={{markedphoto}}&submissionid={{submissionid}}&crop={{n}}">
                   </div>
@@ -46,9 +52,12 @@
               </div>
             </div>
             <br>
-            <div class="final-submit-container">
-              <button class="btn btn-success btn-lg" id="final-submit-button">Load Data to table</button>
-            </div>
+
+            <div id="final-submit-container" class="col-sm">
+              <button class="btn btn-success" id="final-submit-button">Upload changes to database</button>
+            </div>            
+
+
 
           </div>
 
@@ -60,5 +69,6 @@
 
 <!--Load js at the end rather than doing something similar to $('document').ready()-->
 <script src="{{url_for('static', filename='report.js')}}"></script>
+<script src="{{url_for('static', filename='saveChanges.js')}}"></script>
 
 </html>
