there is an option to attempt measurement or not

--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -44,6 +44,19 @@
                     <button class="btn btn-dark" type="submit">submit data</button>
                   </div>
                 </div>
+                <br>
+                <div class="row">
+                  <div class="col-sm"></div>
+                  <div class="col-sm"></div>
+                  <div class="col-sm form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="attempt_measurement">
+                    <label class="form-check-label" for="attempt_measurement">
+                      I want to attempt to obtain measurements
+                    </label>
+                  </div>
+                  <div class="col-sm"></div>
+                  <div class="col-sm"></div>
+                </div>
               </form>
             </div>
 
